@@ -3,6 +3,7 @@
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=16487).
   * The "-type Optimize" option is now treated by the PNG encoder the same
     as if the type were undefined.  Optimization is now always performed.
+  * Merged redundant code into LosslessReduceDepth() function in the PNG codec.
 
 2010-11-14  6.6.5-9 Cristy  <quetzlzacatenango@image...>
   * The splice option no longer throws spurious "pixels are not authentic"
